--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LeetCode)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(LeetCode main.cpp src/P0000_ProblemHead.h src/P0000_ProblemHead.cpp src/P0000_CommonHead.h src/P0001_TwoSum.cpp src/P0001_TwoSum.h)
+add_executable(LeetCode main.cpp src/P0000_ProblemHead.h src/P0000_ProblemHead.cpp src/P0000_CommonHead.h src/P0001_TwoSum.cpp src/P0001_TwoSum.h src/P0002_AddTwoNumbers.cpp src/P0002_AddTwoNumbers.h)
