--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LeetCode)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(LeetCode main.cpp src/P0000_ProblemHead.h src/P0000_ProblemHead.cpp src/P0000_CommonHead.h src/P0001_TwoSum.cpp src/P0001_TwoSum.h src/P0002_AddTwoNumbers.cpp src/P0002_AddTwoNumbers.h src/P0146_LRUCache.cpp src/P0146_LRUCache.h src/P147_InsertionSortList.cpp src/P147_InsertionSortList.h)
+add_executable(LeetCode main.cpp src/P0000_ProblemHead.h src/P0000_ProblemHead.cpp src/P0000_CommonHead.h src/P0001_TwoSum.cpp src/P0001_TwoSum.h src/P0002_AddTwoNumbers.cpp src/P0002_AddTwoNumbers.h src/P0146_LRUCache.cpp src/P0146_LRUCache.h src/P0147_InsertionSortList.cpp src/P0147_InsertionSortList.h src/P0148_SortList.cpp src/P0148_SortList.h)
